@@ -70,6 +70,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|InterruptedIOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|nio
 operator|.
 name|charset
@@ -2492,15 +2502,27 @@ name|InterruptedException
 name|ie
 parameter_list|)
 block|{
-throw|throw
+name|InterruptedIOException
+name|iie
+init|=
 operator|new
-name|IOException
+name|InterruptedIOException
 argument_list|(
 name|ie
 operator|.
 name|toString
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|iie
+operator|.
+name|initCause
+argument_list|(
+name|ie
+argument_list|)
+expr_stmt|;
+throw|throw
+name|iie
 throw|;
 block|}
 finally|finally
